--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,12 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  dockerbuild:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-  build-e-teste:
+  
+  teste:
     runs-on: ubuntu-latest
 
     steps:
@@ -35,7 +31,7 @@ jobs:
         pytest
 
   build-e-push:
-    needs: build-e-teste
+    needs: teste
     runs-on: ubuntu-latest
 
     steps:
