--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -43,7 +43,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKENACCESS }}
 
     - name: Build e push no dockerhub
       uses: docker/build-push-action@v6
