--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -49,7 +49,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./docker/DockerFile
+        file: ./docker/Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/rancher:testeeres-latest 
 
